gui.css: Fix overflow of scale bar.
The browser would show a scrollbar otherwise.

--- a/ete4/smartview/static/gui.css
+++ b/ete4/smartview/static/gui.css
@@ -104,6 +104,7 @@
     stroke-width: 1.5;
     font-family: sans-serif;
     font-size: 12px;
+    overflow: hidden;
 }
 
 
